--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -11,6 +11,7 @@
     <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/commons.css' %} "/>
     <link rel="stylesheet" href="{% static 'css/nav.css' %} "/>
+    <link rel="stylesheet" href="{% static 'rbac/rbac.css' %} "/>
     <style>
         body {
             margin: 0;
@@ -168,12 +169,14 @@
     </div>
     <div class="right-body">
         <div>
-            <ol class="breadcrumb no-radius no-margin" style="border-bottom: 1px solid #ddd;">
+            <!-- <ol class="breadcrumb no-radius no-margin" style="border-bottom: 1px solid #ddd;">
 
                 <li><a href="#">首页</a></li>
                 <li class="active">客户管理</li>
 
-            </ol>
+            </ol> -->
+
+            {% breadcrumb request %}
         </div>
         {% block content %} {% endblock %}
     </div>
@@ -182,6 +185,7 @@
 
 <script src="{% static 'js/jquery-3.3.1.min.js' %} "></script>
 <script src="{% static 'plugins/bootstrap/js/bootstrap.js' %} "></script>
+<script src="{% static 'rbac/rbac.js' %} "></script>
 {% block js %} {% endblock %}
 </body>
 </html>
