--- a/web/templates/auth.html
+++ b/web/templates/auth.html
@@ -13,5 +13,11 @@
 
         <input type="submit" value="提交"> {{ msg }}
     </form>
+    <div>
+    保洁石榴:123
+    财务黄瓜:123
+    销售番茄:123
+    CEO萝卜:123
+    </div>
 </body>
 </html>
