--- a/web/templates/auth.html
+++ b/web/templates/auth.html
@@ -8,8 +8,8 @@
     <form method="post">
         {% csrf_token %}
 
-        <input type="text" name="username">
-        <input type="password" name="password">
+        <input type="text" name="username" value="CEO萝卜">
+        <input type="password" name="password" value="123">
 
         <input type="submit" value="提交"> {{ msg }}
     </form>
