--- a/rbac/templates/rbac/permission_multi.html
+++ b/rbac/templates/rbac/permission_multi.html
@@ -6,46 +6,41 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <form method="post">
-                {{ formset.management_form }}
+                <form method="post" action="?type=generate">
+                {{ generate_formset.management_form }}
                 {% csrf_token %}
                 <div class="card border-secondary mt-2 text-center">
                     <div class="card-header">
                         <span class="float-left"><i class="fa fa-plus-circle"></i> 待新建权限</span>
                         <span class="text-secondary">备注：路由系统中自动发现且数据库中不存在的路由。</span>
 
-                        <a class="float-right" href="/rbac/menu/add/">
+                        <button class="right btn btn-primary btn-sm" href="{% url 'rbac:permission_multi' %}">
                             <i class="fa fa-plus-circle"></i> 点击新建
-                        </a>
+                        </button>
                     </div>
                     <table class="table table-sm table-hover">
                         <thead>
                             <tr>
-                                <th>ID</th>
+                                <!-- <th>ID</th> -->
                                 <th>名称</th>
                                 <th>URL</th>
                                 <th>别名</th>
                                 <th>所属菜单</th>
                                 <th>根权限</th>
+                                <!-- <th>操作</th> -->
                             </tr>
                         </thead>
                         <tbody>
-                            {% for row in router_dict.values %}
-                            
-                            <tr class="table-warning">
-                                <!-- {{ row }} -->
-                                <!-- <th>{{ row.id }}</th> -->
-                                <td> {{row.name}} </td>
-                                <td> {{ row.url }} </td>
-                                <td>
-                                    <a href="/rbac/menu/edit/{{ row.id }}/">
-                                        <i class="fa fa-edit"></i>
-                                    </a>
-                                    |
-                                    <a href="/rbac/menu/del/{{ row.id }}/" class="text-danger">
-                                        <i class="fa fa-trash-o"></i>
-                                    </a>
-                                </td>
+                            {% for form in generate_formset %}
+                            <tr>
+                                {% for row in form %}
+                                    {% if forloop.first %}
+                                    <td class="hide" style="display: none;">
+                                    {% else %}
+                                    <td>
+                                    {% endif %}
+                                    {{ row }} <span class="text-danger">{{ row.errors.0 }}</span> </td>
+                                {% endfor %}
                             </tr>
                             {% endfor %}
                         </tbody>
@@ -53,44 +48,42 @@
                 </div><!-- card -->
                 </form>
 
-                <form method="post">
-                {{ formset.management_form }}
+                <form method="post" action="?type=destroy">
+                {{ destroy_formset.management_form }}
                 {% csrf_token %}
                 <div class="card border-secondary mt-2 text-center">
                     <div class="card-header">
                         <span class="float-left"><i class="fa fa-trash-o"></i> 待删除权限</span>
                         <span class="text-secondary">备注：数据库中存在，但路由系统中不存在的路由。</span>
                     </div>
-<!--                     <div class="card-body">
-                        <p class="card-text">注意：路由系统中自动发现且数据库中不存在的路由。</p>
-                    </div> -->
+
                     <table class="table table-sm table-hover">
                         <thead>
                             <tr>
-                                <th>ID</th>
+                                <!-- <th>ID</th> -->
                                 <th>名称</th>
                                 <th>URL</th>
                                 <th>别名</th>
                                 <th>所属菜单</th>
                                 <th>根权限</th>
+                                <th>操作</th>
                             </tr>
                         </thead>
                         <tbody>
-                            {% for row in menu_queryset %}
-                            {% if row.id == id %}
-                            <tr class="table-warning">
-                            {% else %}
+                            {% for form in destroy_formset %}
                             <tr>
-                            {% endif %}
-                                <!-- <th>{{ row.id }}</th> -->
-                                <td> <a href="?id={{row.id}}">{{ row.title }}</a> </td>
-                                <td><i class="{{ row.icon }}"></i></td>
+                                {% for row in form %}
+                                    {% if forloop.first %}
+                                    <td class="hide" style="display: none;">
+                                    {% else %}
+                                    <td>
+                                    {% endif %}
+                                    {{ row }} <span class="text-danger">{{ row.errors.0 }}</span> </td>
+                                {% endfor %}
                                 <td>
-                                    <a href="/rbac/menu/edit/{{ row.id }}/">
+                                    <a href="{% url 'rbac:permission_edit' id=form.initial.id %}">
                                         <i class="fa fa-edit"></i>
-                                    </a>
-                                    |
-                                    <a href="/rbac/menu/del/{{ row.id }}/" class="text-danger">
+                                    </a>|<a href="{% url 'rbac:permission_del' id=form.initial.id %}" class="text-danger">
                                         <i class="fa fa-trash-o"></i>
                                     </a>
                                 </td>
@@ -101,15 +94,15 @@
                 </div><!-- card -->
                 </form>
 
-                <form method="post">
-                {{ formset.management_form }}
+                <form method="post" action="?type=update">
+                {{ permission_formset.management_form }}
                 {% csrf_token %}
                 <div class="card border-secondary mt-2 text-center">
                     <div class="card-header">
                         <span class="float-left"><i class="fa fa-refresh"></i> 待更新权限</span>
                         <span class="text-secondary">备注：数据库和路由系统都存在的路由。</span>
 
-                        <button class="right btn btn-primary btn-sm" href="/rbac/permission/multi/">
+                        <button class="right btn btn-primary btn-sm" href="{% url 'rbac:permission_multi' %}">
                             <i class="fa fa-refresh"></i> 点击更新
                         </button>
                     </div>
@@ -121,20 +114,29 @@
                                 <th>名称</th>
                                 <th>URL</th>
                                 <th>别名</th>
-                                <th>根权限</th>
                                 <th>所属菜单</th>
+                                <th>根权限</th>
+                                <th>操作</th>
                             </tr>
                         </thead>
                         <tbody>
-                            {% for form in formset %}
+                            {% for form in permission_formset %}
                             <tr>
                                 {% for row in form %}
                                     {% if forloop.first %}
-                                    <td class="hide" style="display: none;">{{ row }} {{ row.errors.0 }} </td>
+                                    <td class="hide" style="display: none;">
                                     {% else %}
-                                    <td>{{ row }} {{ row.errors.0 }} </td>
+                                    <td>
                                     {% endif %}
+                                    {{ row }} <span class="text-danger">{{ row.errors.0 }}</span> </td>
                                 {% endfor %}
+                                <td>
+                                    <a href="{% url 'rbac:permission_edit' id=form.initial.id %}">
+                                        <i class="fa fa-edit"></i>
+                                    </a>|<a href="{% url 'rbac:permission_del' id=form.initial.id %}" class="text-danger">
+                                        <i class="fa fa-trash-o"></i>
+                                    </a>
+                                </td>
                             </tr>
                             {% endfor %}
                         </tbody>
