--- a/web/templates/auth.html
+++ b/web/templates/auth.html
@@ -11,7 +11,8 @@
         <input type="text" name="username" value="CEO萝卜">
         <input type="password" name="password" value="123">
 
-        <input type="submit" value="提交"> {{ msg }}
+        <input type="submit" name="action" value="login"> {{ msg }}
+        <input type="submit" name="action" value="logout"> {{ msg }}
     </form>
     <div>
     保洁石榴:123
