chore: 整理logo 统一名称

--- a/rbac/templates/rbac/menu_list.html
+++ b/rbac/templates/rbac/menu_list.html
@@ -2,17 +2,16 @@
 
 {% block content %}
 
-    <!-- <div class="luffy-container"> -->
     <div class="container">
         <div class="row">
             <div class="col-3">
                 <div class="card mt-2">
-                    <nav class="navbar navbar-light bg-light">
-                        <a class="navbar-brand" href="#">菜单列表</a>
+                    <div class="card-header">
+                        <i class="fa fa-book" aria-hidden="true"></i> 菜单列表
                         <a class="btn btn-sm btn-outline-success" href="/rbac/menu/add/">
                             <i class="fa fa-plus-circle"></i> 新建
                         </a>
-                    </nav>
+                    </div>
 
                     <table class="table table-hover">
                         <thead>
