--- a/rbac/templates/rbac/role_edit.html
+++ b/rbac/templates/rbac/role_edit.html
@@ -2,7 +2,8 @@
 
 {% block content %}
 
-    <div class="luffy-container">
+    <div class="container">
+        <br>
         <form method="post" novalidate>
             <div class="form-group">
             {% csrf_token %}
