--- a/web/templates/payment_list.html
+++ b/web/templates/payment_list.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-    <div class="luffy-container">
+    <div class="container">
         <div style="margin: 5px 0;">
             <a class="btn btn-success" href="/payment/add/">
                 <i class="fa fa-plus-square" aria-hidden="true"></i> 添加缴费记录
