--- a/rbac/templates/rbac/role_list.html
+++ b/rbac/templates/rbac/role_list.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-    <div class="luffy-container">
+    <div class="container" style="margin: 5px 10px;">
         <div style="margin: 5px 0;">
             <a class="btn btn-success" href="/role/add/">
                 <i class="fa fa-plus-square" aria-hidden="true"></i> 添加角色
@@ -26,10 +26,10 @@
                     <td>{{ row.permissions__title }}</td>
                     <td>{{ row.create_time|date:"Y-m-d H:i:s" }}</td>
                     <td>
-                        <a style="color: #333333;" href="/role/edit/{{ row.id }}/">
+                        <a style="color: #333333;" href="/rbac/role/edit/{{ row.id }}/">
                             <i class="fa fa-edit" aria-hidden="true"></i></a>
                         |
-                        <a style="color: #d9534f;" href="/role/del/{{ row.id }}/"><i class="fa fa-trash-o"></i></a>
+                        <a style="color: #d9534f;" href="/rbac/role/del/{{ row.id }}/"><i class="fa fa-trash-o"></i></a>
                     </td>
 
                 </tr>
