--- a/web/templates/customer_import.html
+++ b/web/templates/customer_import.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-    <div class="luffy-container">
+    <div class="container">
         <form method="post" enctype="multipart/form-data">
             {% csrf_token %}
             <div class="form-group">
