--- a/web/templates/customer_list.html
+++ b/web/templates/customer_list.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-    <div class="luffy-container">
+    <div class="container">
         <div class="btn-group" style="margin: 5px 0">
             <a class="btn btn-default" href="/customer/add/">
                 <i class="fa fa-plus-square" aria-hidden="true"></i> 添加客户
