--- a/web/templates/payment_add.html
+++ b/web/templates/payment_add.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 
 {% block content %}
-    <div class="luffy-container">
+    <div class="container">
         <form class="form-horizontal clearfix" method="post" novalidate>
             {% csrf_token %}
 
