--- a/web/templates/payment_edit.html
+++ b/web/templates/payment_edit.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-    <div class="luffy-container">
+    <div class="container">
         <form class="form-horizontal clearfix" method="post" novalidate>
             {% csrf_token %}
 
