update: 更新样式:icon:person.svg

--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -85,7 +85,7 @@
 
             <div class="user-info right">
                 <a href="#" class="avatar">
-                    <img class="img-circle" src="{% static 'imgs/person.svg' %}">
+                    <img class="img-circle" src="{% static 'imgs/person.svg' %}" style="width: 34px;">
                 </a>
 
                 <div class="more-info">
