--- a/rbac/templates/rbac/permission_list.html
+++ b/rbac/templates/rbac/permission_list.html
@@ -28,7 +28,7 @@
             <div class="col-3">
                 <div class="card mt-2">
                     <div class="card-header">
-                        菜单列表
+                        角色列表
                     </div>
                     <ul class="list-group list-group-flush">
                         {% for row in role_list %}
