--- a/rbac/templates/rbac/role_list.html
+++ b/rbac/templates/rbac/role_list.html
@@ -4,7 +4,7 @@
 
     <div class="container" style="margin: 5px 10px;">
         <div style="margin: 5px 0;">
-            <a class="btn btn-success" href="/role/add/">
+            <a class="btn btn-success" href="/rbac/role/add/">
                 <i class="fa fa-plus-square" aria-hidden="true"></i> 添加角色
             </a>
         </div>
